styles/index.css
/* ... */
nav {
  margin: 0;
}
nav > * {}
nav > details {
  width: inherit;
  outline-style: dotted;
  margin-block: var(--margin-collapse-bugfix);

  &::before, &::after {}
  &::before {
    text-indent: 1em;
    display: list-item;
    list-style-type:  '⚙️';
    list-style-position: inside;
    margin: var(--margin-collapse-bugfix) auto;
  }

  &[open] {
    /* overflow-y: scroll; */
  }
}
nav > details > summary::marker {}

/* http://html5doctor.com/the-details-and-summary-elements */
details {
  background: rgba(255,255,255,0.5);
}
summary {
  cursor: s-resize;
  background: blue;
}
summary::before,
summary::after {
  content: 'foo';
  background: red;
  float: right;
}
summary::-webkit-details-marker
  { display: none } /* https://stackoverflow.com/a/66814239 */
details:hover > summary, details:focus-within > summary
  { opacity: 1.0 }
main details > summary::before {
  float: left;
  content: '>';
  background: red;
  display: list-item;
}
main details[open] > summary::before
  { content: 'v' }

/* NAV */
nav {
  margin: 0;
}
nav > details > ul {
  margin: unset;
  width: inherit;
  display: list-item;
  position: relative;
}
nav > details > ul li li {
  list-style: '➱' inside;
}
nav > details > ul li li:hover {
  list-style-type: '➯';
}

body > nav > details {
  text-align: inherit;

  &::after {
    top: 0;
    z-index: -1;
    opacity: 75%;
    content: '🍔';
    display: none;
    width: inherit;
    height: 100svh;
    font-size: 25vh;
    position: fixed;
    text-align: center;
    line-height: 100svh;
    background: transparent;
    backdrop-filter: blur(19px); /* https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter */
  }

  &[open] {
    &::after { display: block }

    & > summary { margin-block-end: 1ch }
  }

  & > summary { /* https://htmlsymbols.xyz/unicode/U+2630 */
    list-style: '☰';
    cursor: pointer;
    line-height: 3em;
    outline: 2px dashed;
    background: inherit;
    list-style-position: inside;
    /* clip-path: inset(0px 244px 1px 170px); */

    &::before, &::after {
      content: '☰Menu';
      cursor: inherit;
      outline: inherit;
      display: inherit;
      background: inherit;
      list-style: inherit;
      list-style-position: inherit;
    }
    &::before { float: left }
    &::after  { float: right }

    &:hover {
      &::before, &::after {}
    }
  }
}

nav li {
  margin: 1ch;
  padding: 1ch;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
nav li::before, nav li::after {
  content: '\2009';
  background: red;
}
nav li::before {
  content: '▷';
  background: inherit;
}
nav li::after  {}
nav li:hover::before, nav li:focus-within::before {
  background: red;
}
body > nav li li :link:focus-visible {
  background-color: Mark;
}
body > nav li li :link::before {
  content: '📄';
  display: inline-block;
  line-height: var(--line-height);
}
body > nav li li :link:hover::before { content: '📝' }


nav li > a:link {
  padding: 0;
  flex: 1 0 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
nav li > a:link::before, nav li > :link::after {}
nav li > a:link::before { content: '▸' }
nav li > a:link::after { content: '' }

small {}
body > footer small { opacity: 0.68 }
article address, body > footer address, [contentinfo] address {
  background: Canvas;
  border-radius: 0.68ch;
}
body > footer address, [contentinfo] address {
  border-radius: 0;
}
address { background: red }
article address {}


ruby {
  color: CanvasText;
  width: fit-content;
  border-radius: 1vw;
  display: inline-block;
  display: block ruby;
  box-shadow: 0 0 .168ch;
  background-color: Canvas;
}

article {}

/* Table styling
  - https://adrianroselli.com/2018/02/tables-css-display-properties-and-aria.html
  - counter styling & fallback
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/forced-colors
    - https://stackoverflow.com/q/17067294/html-table-with-100-width-with-vertical-scroll-inside-tbody/17380697#17380697
*/
table {
  border-radius: 1ch;
  table-layout: fixed;
  border-collapse: collapse;
  box-shadow: var(--box-shadow);
  counter-reset: table rows th tr td;
  background: rgba(255,255,255,0.5);
}
table::before, table::after {
  display: block;
  background: inherit;
}
table::before { border-radius: 1ch 1ch 0 0 }
table::after  { border-radius: 0 0 1ch 1ch }

table tr { display: flex }
table tr > * {
  flex-grow: 1;
  flex-basis: 0;
  flex-shrink: 1;
  display: inline-flex;
  justify-content: space-between;
  outline: 0.1em solid currentColor;
}
table tr::before, table tr::after,
table tr > *::before, table tr > *::after {
  min-width: 2em;
}
table th {
  /* position: sticky; */
  background: inherit;
}
table th:empty { border: none }

table td {
  -webkit-user-select: all; /* Webkit (Chrome all / Safari all) */
          user-select: all; /* https://caniuse.com/mdn-css_properties_user-select_text */
}
table td:empty { border: none }

table > caption {
  /* top: 0; */
  /* position: sticky; */
  /* caption-side: bottom; */
  border-radius: 1ch;
  background: inherit;
}
table > caption::before, table > caption::after {
  display: block;
  background: inherit;
}
table > thead, table > tfoot { background: inherit }
table > thead {
  z-index: 0;
  display: block;
  position: relative;
  background: inherit;
}
table > thead::before, table > thead::after {
  display: block;
  background: inherit;
}
table > tfoot {
  z-index: 0;
  display: block;
  position: relative;
  background: inherit;
}
table > tfoot::before, table > tfoot::after {
  display: block;
  background: inherit;
}
table > tbody {
  z-index: 1;
  display: block;
  position: relative;
  background: inherit;
}
table > tbody::before, table > tbody::after {
  display: block;
  background: inherit;
  border: solid currentColor;
  border-width: 0.1618em 0;
}
tbody tr { counter-increment: rows }
tbody tr:nth-child(even) { background: inherit }
tbody tr::before {
  opacity: 0.3;
  content: counter(rows) '.';
}
/* ... */

